--- a/Examples/Fdp.Examples.Showcase/Fdp.Examples.Showcase.csproj
+++ b/Examples/Fdp.Examples.Showcase/Fdp.Examples.Showcase.csproj
@@ -5,7 +5,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Spectre.Console" Version="0.54.0" />
+    <PackageReference Include="Raylib-cs" Version="7.0.2" />
+    <PackageReference Include="rlImGui-cs" Version="3.2.0" />
   </ItemGroup>
 
   <PropertyGroup>
@@ -13,6 +14,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
