--- a/Fdp.Kernel/Fdp.Kernel.csproj
+++ b/Fdp.Kernel/Fdp.Kernel.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="K4os.Compression.LZ4" Version="1.3.8" />
     <PackageReference Include="MessagePack" Version="3.1.4" />
   </ItemGroup>
 
