--- a/Fdp.Kernel/Fdp.Kernel.csproj
+++ b/Fdp.Kernel/Fdp.Kernel.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Fdp.Tests" />
+    <InternalsVisibleTo Include="ModuleHost.Core" />
   </ItemGroup>
 
   <ItemGroup>
