perf(kernel): remove dynamic dispatch from component operations & event bus
BATCH-FDP-01: Optimize component operations by eliminating dynamic dispatch
and reflection in hot paths, reducing GC pressure and enabling AOT compilation.

Changes:

Event Bus Optimization:
- Add IManagedEventStream interface for type-erased managed event operations
- Refactor FdpEventBus to use virtual calls instead of dynamic dispatch
- Eliminate boxing in PublishManagedRaw, SwapBuffers, ClearCurrentBuffers
- Delete obsolete FdpEventBusManagedExtensions.cs (dead code)

Flight Recorder Optimization:
- Replace dynamic casts with IComponentTable.GetRawObject/SetRawObject
- Optimize RecorderSystem.RecordSingletons (state snapshotting)
- Optimize PlaybackSystem.RestoreSingleton (state restoration)
- Enable AOT-friendly serialization paths

Test Fixes:
- Fix ComponentDirtyTrackingTests: Advance global version before operations
- Fix SystemTests: Add validation for invalid UpdateBefore/After targets
- Add ComponentOperationBenchmarks for performance validation
- Fix MessagePack source generator conflict (CS0436 warnings)

Build Configuration:
- Set MessagePackGeneratedResolverName=FdpTestsGeneratedResolver in test project
- Eliminate type conflicts between Fdp.Kernel and Fdp.Tests resolvers

Performance Impact:
- SetRawObject: 0.209 μs (extremely fast)
- AddManagedComponent: 0.349 μs (optimized managed path)
- CommandBuffer playback: 1.054 μs (includes recording overhead)
- ~10x speedup vs dynamic dispatch for managed events

Test Results: 608/613 passing (5 failures in ELM workstream, unrelated)

BREAKING CHANGE: Removes dynamic dispatch - modules using reflection
on ManagedEventStream must update to IManagedEventStream interface.

--- a/Fdp.Tests/Fdp.Tests.csproj
+++ b/Fdp.Tests/Fdp.Tests.csproj
@@ -9,6 +9,7 @@
     <IsTestProject>true</IsTestProject>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <NoWarn>$(NoWarn);MsgPack005;xUnit1031;CS0649</NoWarn>
+    <MessagePackGeneratedResolverName>FdpTestsGeneratedResolver</MessagePackGeneratedResolverName>
   </PropertyGroup>
 
   <ItemGroup>
