--- a/Examples/Fdp.Examples.CarKinem/Fdp.Examples.CarKinem.csproj
+++ b/Examples/Fdp.Examples.CarKinem/Fdp.Examples.CarKinem.csproj
@@ -22,10 +22,10 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\CarKinem\CarKinem.csproj" />
-    <ProjectReference Include="..\ModuleHost\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
-    <ProjectReference Include="..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
-    <ProjectReference Include="..\ModuleHost\FDP.Toolkit.Time\FDP.Toolkit.Time.csproj" />
+    <ProjectReference Include="..\..\Toolkits\FDP.Toolkit.CarKinem\FDP.Toolkit.CarKinem.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
+    <ProjectReference Include="..\..\Toolkits\FDP.Toolkit.Time\FDP.Toolkit.Time.csproj" />
   </ItemGroup>
 
 </Project>
