--- a/Common/FDP.Interfaces/FDP.Interfaces.csproj
+++ b/Common/FDP.Interfaces/FDP.Interfaces.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
   </ItemGroup>
 
 </Project>
