--- a/Examples/Fdp.Examples.IdAllocatorDemo/Fdp.Examples.IdAllocatorDemo.csproj
+++ b/Examples/Fdp.Examples.IdAllocatorDemo/Fdp.Examples.IdAllocatorDemo.csproj
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ModuleHost\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
-    <ProjectReference Include="..\ModuleHost.Network.Cyclone\ModuleHost.Network.Cyclone.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Network.Cyclone\ModuleHost.Network.Cyclone.csproj" />
   </ItemGroup>
 
 </Project>
