--- a/Toolkits/FDP.Toolkit.CarKinem/FDP.Toolkit.CarKinem.csproj
+++ b/Toolkits/FDP.Toolkit.CarKinem/FDP.Toolkit.CarKinem.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ModuleHost\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
-    <ProjectReference Include="..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
   </ItemGroup>
 </Project>
