--- a/Toolkits/FDP.Toolkit.Lifecycle/FDP.Toolkit.Lifecycle.csproj
+++ b/Toolkits/FDP.Toolkit.Lifecycle/FDP.Toolkit.Lifecycle.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
-    <ProjectReference Include="..\ModuleHost.Core\ModuleHost.Core.csproj" />
-    <ProjectReference Include="..\FDP.Interfaces\FDP.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
+    <ProjectReference Include="..\..\Common\FDP.Interfaces\FDP.Interfaces.csproj" />
     <ProjectReference Include="..\FDP.Toolkit.Tkb\FDP.Toolkit.Tkb.csproj" />
   </ItemGroup>
 
