--- a/Toolkits/FDP.Toolkit.Time/FDP.Toolkit.Time.csproj
+++ b/Toolkits/FDP.Toolkit.Time/FDP.Toolkit.Time.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\ModuleHost.Core\ModuleHost.Core.csproj" />
-    <ProjectReference Include="..\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
-    <ProjectReference Include="..\FDP.Interfaces\FDP.Interfaces.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\Common\FDP.Interfaces\FDP.Interfaces.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
