--- a/Toolkits/FDP.Toolkit.Tkb/FDP.Toolkit.Tkb.csproj
+++ b/Toolkits/FDP.Toolkit.Tkb/FDP.Toolkit.Tkb.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FDP.Interfaces\FDP.Interfaces.csproj" />
-    <ProjectReference Include="..\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\Common\FDP.Interfaces\FDP.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
   </ItemGroup>
 
 </Project>
