--- a/Toolkits/Fdp.Toolkit.Geographic/Fdp.Toolkit.Geographic.csproj
+++ b/Toolkits/Fdp.Toolkit.Geographic/Fdp.Toolkit.Geographic.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
-    <ProjectReference Include="..\ModuleHost\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
   </ItemGroup>
 </Project>
