--- a/Toolkits/FDP.Toolkit.Replication.Tests/FDP.Toolkit.Replication.Tests.csproj
+++ b/Toolkits/FDP.Toolkit.Replication.Tests/FDP.Toolkit.Replication.Tests.csproj
@@ -8,6 +8,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <NoWarn>$(NoWarn);CS8618;CS8602;CS8601;CS8603;CS8604;CS8625;CS8600;CS8605;CS0618;CS0649;CS9191;SYSLIB0050;CS8620</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
