--- a/Toolkits/FDP.Toolkit.Replication/FDP.Toolkit.Replication.csproj
+++ b/Toolkits/FDP.Toolkit.Replication/FDP.Toolkit.Replication.csproj
@@ -12,13 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FDP\Fdp.Kernel\Fdp.Kernel.csproj" />
-    <ProjectReference Include="..\ModuleHost.Core\ModuleHost.Core.csproj" />
-    <ProjectReference Include="..\FDP.Interfaces\FDP.Interfaces.csproj" />
+    <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
+    <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
+    <ProjectReference Include="..\..\Common\FDP.Interfaces\FDP.Interfaces.csproj" />
     <ProjectReference Include="..\FDP.Toolkit.Tkb\FDP.Toolkit.Tkb.csproj" />
     <ProjectReference Include="..\FDP.Toolkit.Lifecycle\FDP.Toolkit.Lifecycle.csproj" />
-    <ProjectReference Include="..\..\FastCycloneDds\src\CycloneDDS.Runtime\CycloneDDS.Runtime.csproj" />
-    <ProjectReference Include="..\..\FastCycloneDds\src\CycloneDDS.Schema\CycloneDDS.Schema.csproj" />
+    <ProjectReference Include="..\..\ExtDeps\FastCycloneDds\src\CycloneDDS.Runtime\CycloneDDS.Runtime.csproj" />
+    <ProjectReference Include="..\..\ExtDeps\FastCycloneDds\src\CycloneDDS.Schema\CycloneDDS.Schema.csproj" />
   </ItemGroup>
 
 </Project>
