--- a/Examples/Fdp.Examples.CarKinem/Fdp.Examples.CarKinem.csproj
+++ b/Examples/Fdp.Examples.CarKinem/Fdp.Examples.CarKinem.csproj
@@ -26,6 +26,9 @@
     <ProjectReference Include="..\..\Kernel\Fdp.Kernel\Fdp.Kernel.csproj" />
     <ProjectReference Include="..\..\ModuleHost\ModuleHost.Core\ModuleHost.Core.csproj" />
     <ProjectReference Include="..\..\Toolkits\FDP.Toolkit.Time\FDP.Toolkit.Time.csproj" />
+    <ProjectReference Include="..\..\Framework\FDP.Framework.Raylib\FDP.Framework.Raylib.csproj" />
+    <ProjectReference Include="..\..\Framework\FDP.Toolkit.Vis2D\FDP.Toolkit.Vis2D.csproj" />
+    <ProjectReference Include="..\..\Framework\FDP.Toolkit.ImGui\FDP.Toolkit.ImGui.csproj" />
   </ItemGroup>
 
 </Project>
