--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ExtDeps/FastCycloneDds"]
 	path = ExtDeps/FastCycloneDds
-	url = https://github.com/pjanec/FastCycloneDds.git
+	url = https://github.com/pjanec/CycloneDds.NET.git
 	branch = main
 [submodule "ExtDeps/FastBTree"]
 	path = ExtDeps/FastBTree
